[ARM] Don't compare unsigned chars to EOF (-1) https://bugs.webkit.org/show_bug.cgi?id=144439

Reviewed by Geoffrey Garen.

Source/WebCore:

* platform/linux/MemoryPressureHandlerLinux.cpp:
(WebKit::nextToken): Don't cast return value of fgetc() to char.

Source/WebKit2:

* Shared/linux/WebMemorySamplerLinux.cpp:
(WebKit::nextToken): Don't cast return value of fgetc() to char.

Canonical link: https://commits.webkit.org/162575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183740 268f45cc-cd09-0410-ab3c-d52691b4dbfc